 Version     Date
 1.19        ??/03/09
                Fix: Dreambox - (non Enigma) retrieving timers.
                Fix: pc_XMLTV - channels regex error
                Fix: TVRage.com unicode logo name matching error.
                Updated: Language Strings
                Updated: Skin tweaks
                Updated: Library code
                Updated: translatePath() changes.
                Change: Yes/No prompts changed to just toggle state.
                Change: EPG themes setup
                Change: Global vars usage
                Change: Seperated some code to own modules. Aids script startup speed and smaller mem footprint.
                Change: LiveSportOnTV (UK) downloads sport icons instead of coming with myTV. Also now purley based on RSS feed.
 1.18.1      ??/09/08 
                Fix: All skins that were missing button icons etc
                Fix: Self updateing. (You will need to manual update from v1.18)
                Fix: Dreambox setup, password now not mandatory.
                Fix: Some skins were not showing action icons.
                Fix: Hauppauge mins error.
                Change: Pad button (A,B,X,Y etc) graphics improved.
                Change: Some skin tweaks.
                Change: Language strings.
                Change: Dreambox amended to work with Enimga2 model.
                Change: Logos can now be either .gif .png .jpg
                Change: Some IMDb search improvments.
                New: MediaStream and PM3.HD skin (thanks smuto).
                New: Polish translation (thanks smuto).
                New: Setting option to show/hide datasource/Saveprogramme names.
 1.18        19/08/08
                Fix/Change/Updated: All datasources and SaveProgramme modules.
                Change: datasource us_Zap2it amended to use us_SchedulesDirect (now a paid for service - you need to sign up ~ $20 - sorry!)
                Fix/Updated: IMDb scraping.